--- a/ProspectiveUndergrads.Rmd
+++ b/ProspectiveUndergrads.Rmd
@@ -8,7 +8,7 @@ title: "Joining the lab as an undergraduate"
 description: 
   ""
 ---
-As of November 2022, we are reviewing applications we have received and are no longer accepting new applications. Please return to this page at a later date, as our needs may change.
+As of Fall 2023, we are reviewing applications we have received and are no longer accepting new applications. Please return to this page at a later date, as our needs may change.
 
 <!-- recruiting research assistants for volunteer, credit, and federal work study pay! 
 
