--- a/Research.Rmd
+++ b/Research.Rmd
@@ -19,7 +19,7 @@ In fact, the stressor characteristics that contribute most to alcohol’s stress
 2) Evidence of adaptations or other perturbances in these stressor mechanisms in drug-dependent samples. 
 3) We also maintain supplementary focus on empirical refinement of psychophysiology methods and the improvement of clinical psychological science broadly. 
 
-We recognize that substantive advancement in my main areas of research requires rigorous, transparent, and programmatic practices.  
+Below, learn about some specific, recent and current studies, as well as historical, broad, foci of our lab.   
 
 ---
 
@@ -57,7 +57,7 @@ Alcohol administration studies such as the one described above provide evidence 
 Concerns from the research community and public about the replicability of psychological science have spurred calls to increase the rigor and transparency of our field. Increased attention to racism and challenges to equity brought about by ongoing tragic events have opened many people's eyes to the need for improved equity in psychological science. We attempt to answer these calls in a number of ways. For example, by using increasingly larger and more diverse sample sizes in experimental paradigms with all relevant physiological processing and analysis parameters preregistered and all data shared openly. We have also published empirical studies providing evidence-based approaches to establishing proper [quantification and measurement](files/publications/BradfordD2015b/BradfordD2015b.pdf) of psychophysiological signals used to study psychological processes. Psychophysiological tasks such as the ones used in our research are poised to become a major contribution to NIMH RDoC and related initiatives in experimental medicine. They also align well with NIMH’s current priorities in experimental therapeutics including focus on mechanisms in clinical trials and the use of surrogate end points for treatment development, and endophenotype identification. 
 For these tasks to contribute meaningfully, however, proper standards for their measurement and quantification must be established. Furthermore, their psychometric properties must be understood for them to be well positioned as tools in psychological research. 
 
-Our efforts thus far have contributed to a clear and comprehensive empirical evaluation of the advantages and limitations of combinations of several measures, tasks, and quantification approaches used in affective and clinical science. In addition to empirical studies, we contribute to methodological themed commentaries published in high profile outlets such as [Nature Human Behavior](files/publications/LakensD2018a/LakensD2018a.pdf) and [Neuropsychopharmocology](files/publications/BradfordD2018/BradfordD2018a.pdf).Recently, we have begun to examine challenges to equity in psychophysiology such as the over use of non-diverse samples and methods that preclude participation from specific communities.  
+Our efforts thus far have contributed to a clear and comprehensive empirical evaluation of the advantages and limitations of combinations of several measures, tasks, and quantification approaches used in affective and clinical science. In addition to empirical studies, we contribute to methodological themed commentaries published in high profile outlets such as [Nature Human Behavior](files/publications/LakensD2018a/LakensD2018a.pdf) and [Neuropsychopharmocology](files/publications/BradfordD2018/BradfordD2018a.pdf). Recently, we have begun to examine [challenges to equity in psychophysiology](https://journals.sagepub.com/doi/full/10.1177/21677026221112117?casa_token=p90oVler1iIAAAAA%3AZotube7NpusU6QwRT2HpJkx3p5i07oM7hyW20iC2sSeLw-NSZ8G-EWUXmt7kYx6LkCc8uGWepBaApA) such as the over use of non-diverse samples and methods that preclude participation from specific communities.  
 
 ---
 
