--- a/Values.Rmd
+++ b/Values.Rmd
@@ -14,7 +14,7 @@ The science we do in the lab is complex. I believe it is crucial to present this
 
 I am very proud to have been fortunate enough to have my mentoring recognized several times. I received the 2017 Excellence in Undergraduate Mentoring Award from the Office of the Provost at University of Wisconsin, Madison. My contributions to mentoring students from diverse backgrounds was also recognized by the Multicultural Graduate Network with an honorable mention for their Peer Mentor Award. In 2021, I was awarded both the University of Miami Graduate Faculty Mentor of the Year award and the Psychology Graduate Student Organization Teacher of the Year award. I am new to Oregon State University as of January 2022 so I am happy to provide references to my mentoring by mentees from my previous universities.  
 
-**Reproducibility, Rigor, Transparency, and Openness:**  
+**Reproducibility, Rigor, Transparency, Equity, and Openness:**  
 
 Fifteen years ago, during a heated debate, my coworker angrily spoke words that still echo in my mind: “Psychology is a pseudoscience.” These words illustrate a common stigma that psychology’s merit is not up to par with the hard sciences, something that threatens the standing of psychological research in the public eye. Today, this threat is amplified by widespread concerns about the reproducibility of psychological science and more broadly, societal shifts towards a “post truth era.” Unfortunately, negative public perception about psychology can also discourage people from seeking much-needed psychological treatment. Consequently, stigma surrounding mental illness persists. Our lab is committed to fighting these issues, among others, through doing careful, rigorous, and transparent science. We aim to increase our understanding of human behavior while simultaneously remaining critical consumers and reliable disseminators of research. Most of our research is programmatic meaning we do multiple studies on the same topic and use careful internal replications. For many of our studies, we preregister our analysis parameters and openly share our data and analysis code.  
 
