--- a/ProspectiveGrads.Rmd
+++ b/ProspectiveGrads.Rmd
@@ -4,7 +4,7 @@ description:
   ""
 ---
 
-**If you are interested in joining the BRAD-LAB as a graduate student, please note:**  
+**If you are interested in joining the BEAVERS Lab as a graduate student, please note:**  
 
 Dr. Bradford reads all applications fully. It should be noted that the psychology programs at Oregon State University are competitive. As such, successful applicants typically have higher than average GPAs, GRE scores and at least 1 year of research experience. It is also preferable to have strong letters of recommendation. Though authorship on publications are not expected, some demonstration of scientific writing ability and/or presentation experience is preferred. All that said, Dr. Bradford does read and consider all applications fully. If you have strong interest in our lab and believe your application would be considered less competitive for any of the reasons above, please either ask one of your letter writers to address this in their recommendation or speak to this in your personal statement.
 
