--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,8 @@ We are a psychophysiological research lab in the [School of Psychological Scienc
 :::
 
 <div class="note">
-<strong> NOTE:</strong> Dr. Bradford **WILL** be reviewing applications for the 2023-2024 graduate student application cycle for the Health Psychology PhD program. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area). Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions. </div> 
+<strong> NOTE:</strong> Dr. Bradford **WILL** be reviewing applications for the 2023-2024 graduate student application cycle for the Psychology PhD program with focus on Health Psychology and for the new Clinical Science option. Our Clinical Science option is new this year and we intend to seek APA accreditation. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area). We are in the process of updating websites with information for the Clinical Science option, but note that many of the Health Psychology faculty will also be reviewing Clinical Science applications this year. 
+Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions. </div> 
 
 <!--- Dr. Bradford will be reviewing applications for the 2023 graduate student application cycle for the Health Psychology PhD program. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area). Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions.--> 
 <!--![](images/Dr_BennitoNoBG.png)-->
