Change RA descriptions to "class of YEAR"

--- a/EmmaG.Rmd
+++ b/EmmaG.Rmd
@@ -7,7 +7,7 @@ output:
  
 ## Bio
 
-I'm a third year Honors College student majoring in BioHealth Sciences with a pre-med option. Through my coursework, I have become interested in the intersection between physical health and mental health. After shadowing in an opioid addiction clinic in rural West Virginia during a summer internship, learning about the psychological mechanisms behind addiction has become a research interest of mine. I think understanding more about these psychological mechanisms will make me a well-rounded practicing physician in the future. In addition, I'm passionate about destigmatising mental health and providing equitable healthcare through alleviating health disparities. In order to better my own mental health, I love going outside to hike, camp, kayak, and downhill ski. Growing up in Bend, Oregon has led me to appreciate the outdoors and everything it has to offer.
+I'm an Honors College student in the class of 2024 majoring in BioHealth Sciences with a pre-med option. Through my coursework, I have become interested in the intersection between physical health and mental health. After shadowing in an opioid addiction clinic in rural West Virginia during a summer internship, learning about the psychological mechanisms behind addiction has become a research interest of mine. I think understanding more about these psychological mechanisms will make me a well-rounded practicing physician in the future. In addition, I'm passionate about destigmatising mental health and providing equitable healthcare through alleviating health disparities. In order to better my own mental health, I love going outside to hike, camp, kayak, and downhill ski. Growing up in Bend, Oregon has led me to appreciate the outdoors and everything it has to offer.
 
 ## Education
 
