--- a/LindsayB.Rmd
+++ b/LindsayB.Rmd
@@ -7,7 +7,7 @@ output:
  
 ## Bio
 
-I'm a third-year Honors College student majoring in Psychology with a pre-med option. I'm also a part of the Medical Humanities Certificate program, and currently studying the intersections of dehumanization in the Applied Social Cognition Lab on campus. This year, I joined the Interpersonal Violence Prevention team at OSU as an outreach assistant. I'm interested in exploring the psychophysiological and social realms of research with intersectional perspectives and inclusivity at the core of my work. I'm also passionate about holistic, equitable, patient centered approaches to healthcare and destigmatizing mental health. In the future, I hope to pursue medical school and become a psychiatrist.
+I'm an Honors College student in the class of 2024 majoring in Psychology with a pre-med option. I'm also a part of the Medical Humanities Certificate program, and currently studying the intersections of dehumanization in the Applied Social Cognition Lab on campus. This year, I joined the Interpersonal Violence Prevention team at OSU as an outreach assistant. I'm interested in exploring the psychophysiological and social realms of research with intersectional perspectives and inclusivity at the core of my work. I'm also passionate about holistic, equitable, patient centered approaches to healthcare and destigmatizing mental health. In the future, I hope to pursue medical school and become a psychiatrist.
 
 ## Education
 
