--- a/LucasT.Rmd
+++ b/LucasT.Rmd
@@ -11,7 +11,7 @@ Growing up in East Lansing Michigan, I found myself outdoors frequently which le
 
 In the future, my goal is to get my PhD in clinical psychology to work as a counselor as well as further conduct research in my field of interest. 
 
-I am currently working as a job counselor for individuals who are disabled and need some extra help with their careers. This has given an extra push for me to want to work in the psychotherapy field in the future. 
+I am currently working as a job counselor for individuals who are disabled and need some extra help with their careers. This has given an extra push for me to want to work in the psychotherapy field in the future. I am in the class of 2025 at Oregon State University.
 
 ## Education
 
