--- a/CorrynD.Rmd
+++ b/CorrynD.Rmd
@@ -7,7 +7,7 @@ output:
  
 ## Bio
 
-I am a freshman in the honors college and pursuing a major in psychology with a minor in chemistry. I am from Colorado and am amazed by the beautiful rain and greenery at Oregon State University. After completing my Bachelor of Arts at Oregon State, I will be furthering my education in graduate school for neuropsychology. 
+I am an Honors College student in the class of 2026 pursuing a major in psychology with a minor in chemistry. I am from Colorado and am amazed by the beautiful rain and greenery at Oregon State University. After completing my Bachelor of Arts at Oregon State, I will be furthering my education in graduate school for neuropsychology. 
 
 I am grateful to be participating in the URSA program and involved in research that I am curious about. I am excited to learn from my mentor, Dr. Daniel Bradford, and understand the psychopathology approach used to understand stress reactivity. I am fascinated by the brain’s response to stress and neuropsychology as a whole. I am excited to begin research in the BEAVERS lab as an undergraduate because I have many questions that I am eager to answer for my honors thesis on the clinical treatment of psychological disorders. 
 
