Created page for Susie

--- a/LucasT.Rmd
+++ b/LucasT.Rmd
@@ -19,7 +19,7 @@ I am currently working as a job counselor for individuals who are disabled and n
 
 Psychology and BioHealth Sciences | Expected June 2025
 
-## Experience
+## Interests
 
 * Cognitive and Psychophysiology 
 * Violin 
