--- a/People.Rmd
+++ b/People.Rmd
@@ -106,18 +106,6 @@ knitr::include_graphics("images/EmmaG.png")
 
 :::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long brown hair and a polo shirt on.",echo=FALSE}
-knitr::include_graphics("images/NickP.png")
-```
-[Nick Peavey](NickP.html)
-<br/>
-**Volunteer Assistant Researcher**
-:::
-
-<br/>
-
-:::float-image
-
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long strawberry blonde straight hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
 # ### knitr::include_graphics("images/SusieR.png")
 ```
@@ -155,6 +143,18 @@ knitr::include_graphics("images/CatalinaS.png")
 
 :::float-image
 
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with curly hair with fair, freckled skin, against a neutral-colored wall.", echo=FALSE}
+knitr::include_graphics("images/GennaW.png")
+```
+[Genna Stern](GennaW.html)
+<br/>
+**Volunteer Assistant Researcher**
+:::
+
+<br/>
+
+:::float-image
+
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
 knitr::include_graphics("images/LucasT.png")
 ```
@@ -178,14 +178,15 @@ knitr::include_graphics("images/MiaT.png")
 
 <br/>
 
+
 :::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with curly hair with fair, freckled skin, against a neutral-colored wall.", echo=FALSE}
-knitr::include_graphics("images/GennaW.png")
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with dark hair and a black windbreaker in front of a brick building.", echo=FALSE}
+###knitr::include_graphics("images/CharlieX.png")
 ```
-[Genna Watkins](GennaW.html)
+[Charlie Xu](CharlieX.html)
 <br/>
-**Undergraduate Assistant Researcher**
+**URSA Assistant Researcher**
 :::
 
 <center> 
@@ -290,6 +291,20 @@ knitr::include_graphics("images/JacksonC.png")
 [Jackson Cutler](JacksonC.html)
 <br/>
 **Undergraduate Assistant Researcher, 2021-2022**
+:::
+
+<br/>
+
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long brown hair and a polo shirt on.",echo=FALSE}
+knitr::include_graphics("images/NickP.png")
+```
+
+[Nick Peavey](NickP.html)
+<br/>
+**Volunteer Assistant Researcher, 2023-2024**
 :::
 
 <br/>
