Updated Lab Alumni, Qiying page outline

--- a/Presentations.Rmd
+++ b/Presentations.Rmd
@@ -13,6 +13,8 @@ description:
 ---
 ## -2024- ##
 
+Whittaker, F., Respini, S. E., Gilmore, E. M., Tognoli, M. I., Ransford, K., Byrne, L., Xu, C. P., Ma, Q., & Bradford, D. E. Shots In The Dark: Alcohol Dampens Startle Potentiation In A Novel Threat Of Darkness Paradigm. (2024, October). Poster to be presented at the 64th annual Society for Psychophysiological Research, Prague, Czech Republic. 
+
 Whittaker, F., Respini, S. E., Watkins, G. M., Gilmore, E. M., DeFalco, A., Peavey, N., Tepe, L. R., Rifkin, E. J., Perez, M., & Bradford, D. E. Lost in the Shadows: a Novel Dark-Enhanced Startle Task. (2024, August). Poster to be presented for the American Psychological Association 2024 Annual Meeting, Seattle, WA. 
 
 ## -2023- ##
@@ -29,13 +31,13 @@ DeFalco, A., Beaman, L., Cutler, J.T., Doran, N., Tognoli, M.I., Perkins, E.R., 
 
 ## -2018- ##
 
-Sant’Ana DJ, Bradford DE, Starr MJ, Curtin JJ (2018). Risky or rational? Alcohol increases the subjective value of uncertain rewards in a reward decision-making task. Presented at the Society for Psychophysiological Research (SPR) Annual Meeting, Quebec City, Quebec.[PDF](files/Presentations/SantAnaS2018/SantAna_SPR_2018.pdf)
+Sant’Ana DJ, Bradford DE, Starr MJ, Curtin JJ (2018). Risky or rational? Alcohol increases the subjective value of uncertain rewards in a reward decision-making task. Presented at the Society for Psychophysiological Research (SPR) Annual Meeting, Quebec City, Quebec. [PDF](files/Presentations/SantAnaS2018/SantAna_SPR_2018.pdf)
 
 Hur J, Kaplan CM, Bradford DE, Curtin JJ, Smith JF, Shackman AJ (2018). Acute alcohol administration dampens threat-related activation in the central extended amygdala. Poster accepted for presentation at the Anxiety and Depression Association of America (AADA) Annual Meeting, Washington, DC.
 
 ## -2017- ##
 
-Bradford DE, Shireman JM, Kittleson SJ, Fleming MN, & Curtin JJ (2017). Drinking with the devil you don’t know and the one you can’t control: Alcohol’s effects during unpredictable and uncontrollable stressors in the laboratory. Poster presented at the Society for Research in Psychophysiology (SRP) Annual Meeting, Denver, CO. [PDF](files/Presentations/BradfordD2017/Bradford_SRP2017.pdf)
+Bradford DE, Shireman JM, Kittleson SJ, Fleming MN, & Curtin JJ (2017). Drinking with the devil you don’t know and the one you can’t control: Alcohol’s effects during unpredictable and uncontrollable stressors in the laboratory. Poster presented at the Society for Research in Psychophysiology (SRP) Annual Meeting, Denver, CO.  [PDF](files/Presentations/BradfordD2017/Bradford_SRP2017.pdf)
 
 Goodwin MG, Shireman JM, Fronk GE, Schneck SE, Kayser AD, Bradford DE, Curtin JJ (2017). Alcohol stress response dampening occurs during unpredictable but not uncontrollable shock stressors. Poster presented at the 40th annual meeting of the Research Society on Alcoholism, Denver, CO. 
 
