--- a/People.Rmd
+++ b/People.Rmd
@@ -54,19 +54,6 @@ knitr::include_graphics("images/FreyaW2.png")
 
 :::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long strawberry blonde straight hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
-knitr::include_graphics("images/LindsayB.png")
-```
-[Lindsay Beaman](LindsayB.html)
-<br/>
-**Undergraduate Assistant Researcher**
-:::
-
-
-<br/>
-
-:::float-image
-
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
 knitr::include_graphics("images/NicoD.png")
 ```
@@ -91,18 +78,6 @@ knitr::include_graphics("images/CorrynD.png")
 
 <br/>
 
-:::float-image
-
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
-knitr::include_graphics("images/EmmaG.png")
-```
-
-[Emma Gilmore](EmmaG.html)
-<br/>
-**Honors Thesis Assistant Researcher**
-:::
-
-<br/>
 
 :::float-image
 
@@ -130,19 +105,6 @@ knitr::include_graphics("images/EJR.png")
 
 :::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Photo of a person with blond curly hair wearing a brown cowboy hat against a backdrop of greenery.", echo=FALSE}
-knitr::include_graphics("images/CatalinaS.png")
-```
-
-[Catalina Slangan](CatalinaS.html)
-<br/>
-**Undergraduate Assistant Researcher**
-:::
-
-<br/>
-
-:::float-image
-
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with curly hair with fair, freckled skin, against a neutral-colored wall.", echo=FALSE}
 knitr::include_graphics("images/GennaW.png")
 ```
@@ -162,18 +124,6 @@ knitr::include_graphics("images/LucasT.png")
 [Lucas Tepe](LucasT.html)
 <br/>
 **Undergraduate Assistant Researcher**
-:::
-
-<br/>
-
-:::float-image
-
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with long dark straight hair and two streaks of pink hair, fair skin, and a black shirt against a leafy background.", echo=FALSE}
-knitr::include_graphics("images/MiaT.png")
-```
-[Mia Tognoli](MiaT.html)
-<br/>
-**Honors Thesis Assistant Researcher**
 :::
 
 <br/>
@@ -284,6 +234,19 @@ knitr::include_graphics("images/KarenAP.png")
 
 :::float-image
 
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long strawberry blonde straight hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
+knitr::include_graphics("images/LindsayB.png")
+```
+[Lindsay Beaman](LindsayB.html)
+<br/>
+**Undergraduate Assistant Researcher, 2021-2024**
+:::
+
+
+<br/>
+
+:::float-image
+
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with a black hat on, fair skin, and a grey rain jacket against a mountaneous background.", echo=FALSE}
 knitr::include_graphics("images/JacksonC.png")
 ```
@@ -291,6 +254,19 @@ knitr::include_graphics("images/JacksonC.png")
 [Jackson Cutler](JacksonC.html)
 <br/>
 **Undergraduate Assistant Researcher, 2021-2022**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
+knitr::include_graphics("images/EmmaG.png")
+```
+
+[Emma Gilmore](EmmaG.html)
+<br/>
+**Honors Thesis Assistant Researcher, 2022-2024**
 :::
 
 <br/>
@@ -309,6 +285,21 @@ knitr::include_graphics("images/NickP.png")
 
 <br/>
 
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Photo of a person with blond curly hair wearing a brown cowboy hat against a backdrop of greenery.", echo=FALSE}
+knitr::include_graphics("images/CatalinaS.png")
+```
+
+[Catalina Slangan](CatalinaS.html)
+<br/>
+**Undergraduate Assistant Researcher, 2022-2024**
+:::
+
+<br/>
+
+
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Image of a person with straight brown hair and fair skin with freckles wearing a striped shirt leaning against a tree trunk.", echo=FALSE}
@@ -319,3 +310,15 @@ knitr::include_graphics("images/DakotaS.jpg")
 <br/>
 **Undergraduate Assistant Researcher, 2022-2023**
 :::
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with long dark straight hair and two streaks of pink hair, fair skin, and a black shirt against a leafy background.", echo=FALSE}
+knitr::include_graphics("images/MiaT.png")
+```
+[Mia Tognoli](MiaT.html)
+<br/>
+**Honors Thesis Assistant Researcher, 2021-2024**
+:::
+
+<br/>
