--- a/People.Rmd
+++ b/People.Rmd
@@ -139,6 +139,18 @@ knitr::include_graphics("images/CharlieX.png")
 **URSA Assistant Researcher**
 :::
 
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with dark long hair in a car.", echo=FALSE}
+knitr::include_graphics("images/MarissaP.jpg")
+```
+[Marissa Perez](MarissaP.html)
+<br/>
+**Volunteer Assistant Researcher**
+:::
+
 <center> 
 ## Collaborators
 </center>
