--- a/Presentations.Rmd
+++ b/Presentations.Rmd
@@ -19,15 +19,35 @@ Whittaker, F., Respini, S. E., Watkins, G. M., Gilmore, E. M., DeFalco, A., Peav
 
 ## -2023- ##
 
-Whittaker, F., DeFalco, A., Tognoli, M.I., Gilmore, E., & Bradford, D.E. (2023, September). A refined dark enhanced startle task. Poster presented at the 63rd annual Society for Psychophysiological Research, New Orleans, LA.
+DeFalco, A., Whittaker, F., Dooley, C., Curtin, J.J., Bradford, D.E. (2023, October) Risky business: alcohol increases the subjective value of uncertain rewards. Poster presented at the International Conference on Gambling and Addiction, Las Vegas, NV. 
 
-DeFalco, A., Whittaker, F., Dooley, C., Curtin, J.J., Bradford, D.E. (2023, September). Spirited away: alcohol may dull error monitoring and encourage risky choices. Poster presented at the 63rd annual Society for Psychophysiological Research, New Orleans, LA.
+DeFalco, A., Whittaker, F., Dooley, C., Curtin, J.J., Bradford, D.E. (2023, October). Spirited Away: Alcohol may Dull Error Monitoring and Encourage Risky Choices. Poster presented at the 63rd annual meeting of the Society for Psychophysiological Research, New Orleans, LA.  
+
+Whittaker, F., DeFalco, A., Tognoli, M.I., Gilmore, E.M., Bradford, D.E. (2023, October). A Refined Dark Enhanced Startle Task. Poster presented at the 63rd annual meeting of the Society for Psychophysiological Research, New Orleans, LA.  
 
 ## -2022- ##
 
 Bradford, D.E., Willwerth, S.B., DeFalco, A., Mannix, R.M., Meehan III, W.P., Oldham, J.R. (2022, September). Attenuated general startle reactivity in adolescent athletes with a concussion history. Poster presented at the 62nd annual meeting of the Society for Psychophysiological Research. Vancouver, BC, Canada.[PDF](files/Presentations/BradfordD2022/Concussion_Poster_2022_FINAL.pdf)
 
 DeFalco, A., Beaman, L., Cutler, J.T., Doran, N., Tognoli, M.I., Perkins, E.R., Joyner, K.J., Bradford, D.E. (2022, September). The dearth of sample demographic description and representativeness in clinical psychophysiological research. Poster presented at the 62nd annual meeting of the Society for Psychophysiological Research. Vancouver, BC, Canada. [PDF](files/Presentations/DeFalcoA2022/SPR_Poster_FINAL.pdf)
+
+Oldham J.R., Bradford D.E., Willwerth SB, Mannix RM, Meehan WP. (2022, May) Acoustic Startle Reflex in Adolescents With and Without a Concussion History: A Preliminary Investigation. Poster presented at the American College of Sports Medicine Annual Meeting, San Diego, CA. 
+
+Lewis, M.W., Bradford, D.E., Pace-Schott, E.F., Rauch, S.L., Rosso, I.M. (2022, April) Multiverse Analyses of Fear Conditioning and Extinction Retention in PTSD. Poster presented at the 28th annual Wisconsin Symposium on Emotion, Madison, WI.  
+
+## -2021- ##
+
+Lewis, M.W., Casteen, E., Frederiks, K., Ostrand, C., Bradford, D.E., Rauch, S., Rosso, I. (2021, Dec). Associative Fear Learning in PTSD May Depend upon Non-Associative Fear. Poster presented at the 59th annual meeting for the American College of Neuropsychopharmacology, Virtual. 
+
+Kim, H., Smith, J., Islam, S., Anderson, A., Kaplan, C., Deyoung, K., Grogans, S., Fox, A.S., Bradford, D.E., Curtin, J.J., Shackman, A. (2021, Nov). The Role of the Central Extended Amygdala in Acute Nicotine Abstinence. Poster presented at the 50th annual Society for Neuroscience, Virtual. 
+
+Dev, A.S., Bradford, D.E., Timpano, K.R., (2021, November). Liquid Courage? Affective Forecasts and Alcohol Use in Social Anxiety. Poster presented at the 55th annual meeting of the Association for Cognitive and Behavioral Therapy, Virtual. 
+
+Frederiks, K., Casteen, E., Lewis, M., Bradford, D.E., Rauch, S., Rosso, I. (2021, May). Fear Potentiated Startle to Safety Cues is Related to Anxious Arousal in PTSD. Poster presented at the annual meeting for Biological Psychiatry, Virtual.  
+
+## -2019- ##
+
+Bradford, D.E., Shireman, J. M., Sant’Ana, S.J., Fronk, G.E., Schneck, S.E., Curtin, J.J. (2019, April). Drinking with the devil you don't know and the one you can't control: Alcohol's effects during uncertain and uncontrollable stressors in the laboratory. Poster presented at the 25th annual Wisconsin Symposium on Emotion, Madison, WI. 
 
 ## -2018- ##
 
@@ -68,7 +88,13 @@ Kaye JT, Bradford DE, Rohrer CT, Hamilton RK, Kayser AD, Curtin JJ (2015). Psych
 
 Bradford DE, Magruder KP, Subramani OS, Marek NM, Curtin JJ, Piper ME (2014). Smoking anticipation and actual smoking both lower physiological and psychological reactivity to stress for smokers in withdrawal. Poster presented at the Society for Research on Nicotine and Tobacco annual meeting, Seattle, WA. [PDF](files/Presentations/BradfordD2014/Bradford_Piper2_SRNT2014.pdf)
 
+Magruder, K.P., Bradford, D.E., Starr, M.J., Motschman, C.A., Korhumel, R.A., Curtin, J.J. (2014, June). Alcohol stress response dampening of startle response, self-report, and ERPs during threat of uncertain location. Poster presented at the 37th annual meeting of the Research Society on Alcoholism, Bellevue, WA.
+
 Bradford DE, Korhumel RA, Makhiboroda A, Grabinski KM, Raupp GJ, Curtin JJ, Piper ME (2014). Anticipation of smoking attenuates stress response measured with startle potentiation and self-report in nicotine deprived smokers. Poster presented at the Society for Psychophysiological Research annual meeting, Atlanta, GA. [PDF](files/Presentations/BradfordD2014b/Bradford_Piper2_SPR2014_FINAL.pdf)
+
+## -2013- ##
+
+Curtin, J.J., Hefner, K.R., Moberg, C.A., Bradford, D.E. (2013, January). Selective reduction of anxiety by alcohol: Psychophysiological evidence from laboratory manipulations of threat uncertainty. Poster presented at the 46th annual meeting of the Winter Conference on Brain Research, Breckenridge, CO. 
 
 ## -2012- ##
 
@@ -79,5 +105,37 @@ Starr MJ, Bradford DE, Motschman C, Korhumel R, Curtin JJ(2012). Dose-dependent 
 ## -2011- ##
 
 Bradford DE, Kaye JT, Curtin JJ (2011). Not Just Noise: Individual Differences in Baseline Startle are Anxiety Revelant. Poster presented at the Society for Psychophysiological Research annual meeting, Boston, MA. [PDF](files/Presentations/BradfordD2011/SPR2011Bradford.pdf)
+
+Starr, M.J., Bradford, D.E., Shackman, A.J., Curtin, J. J. (2011, September). An empirical comparison of commonly used methods of quantifying startle potentiation. Poster presented at the 51st annual meeting of the Society for Psychophysiological Research, Boston, MA. 
+
+Kaye, J. T., Williams, W. C., Hachiya, L. Y., Bradford, D. E., Curtin, J. J. (2011, September). Affective response to differential threat probabilities is unaffected by nicotine deprivation. Poster presented at the 51st annual meeting of the Society for Psychophysiological Research, Boston, MA. 
+
+## -2010- ##
+
+Letkiewicz, A., Lissek, S., Bradford, D.E., Charney, D., Barrios, M., Grillon, C. (2010 May) The Temporal course of conditioned fear-generalization in healthy subjects. Poster presented at the 65th annual meeting of the Society of Biological Psychology, New Orleans, LA. 
+
+## -2009- ##
+
+Geraci, M., Luckenbaugh, D., Blair, K., Bradford, D.E., Vythilingam, M., Lissek, S., Grillon, C., Blair, J., Pine, D. (2009 May). Evaluating Childhood Experiences as Potential Risk for Adult Anxiety Disorders: PD, GAD, and GSP. Poster presented at the annual American Psychiatric Association Convention, San Francisco, CA. 
+
+## -2008- ##
+
+Kittinger, R., Martin, K., Rubio, E.K., Bradford, D.E., & Correia, C.J. (2008, November). The relationship between the use of social networking sites and internet addiction. Poster presented at the annual meeting of the Association for Behavioral and Cognitive Therapies, Orlando, FL. 
+
+Bradford, D.E., Lissek, S., Ramirez, G., & Grillon, C. (2008, May) Studying Conditioned Fear Generalization Using Retinotopic Mapping Annuli in an fMRI Procedure. Poster presented at the 20th annual Association for Psychological Science Convention, Chicago, Il.
+
+## -2007- ##
+
+Irons, J, Correia, C. J., Brice, S., Bradford, D.E. (2007, May) A novel choice procedure: Empirical assessment of the adequacy of potential monetary reinforcers for college student smokers. Poster presented at the 19th annual Association for Psychological Science Convention, Washington D.C. 
+
+Howard, C., Bradford, D.E., and Buskist, W. (2007, February) Enthusiasm for teaching and learning and links to student performance. Poster presented at 19th annual Southeastern Conference on the Teaching of Psychology, Atlanta, Georgia. 
+
+## -2005- ##
+
+Rahn, E., Platt, T., Bradford D.E., and Escobar, M. (2005, March) Inhibition of delay in Pavlovian appetitive conditioning: Retardation test. Poster presented at the Annual International Conference on Comparative Cognition, Melbourne Beach, Florida. 
+
+Bradford, D.E., Bray, L. Sissons, H., Escobar, M. (2005, November). Predictive vs. diagnostic learning in causality judgments. Poster presented at Auburn University Psychology Department 11th Annual Graduate Research Festival, Auburn, Alabama. 
+
+## ##
 
 For a complete list of Dr. Bradford's presentations, see his [CV](files/CVs/Bradford_CV.pdf)
