--- a/People.Rmd
+++ b/People.Rmd
@@ -82,7 +82,7 @@ knitr::include_graphics("images/CorrynD.png")
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long strawberry blonde straight hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
-# ### knitr::include_graphics("images/SusieR.png")
+knitr::include_graphics("images/SusieR.png")
 ```
 [Susie Respini](SusieR.html)
 <br/>
@@ -149,6 +149,18 @@ knitr::include_graphics("images/MarissaP.jpg")
 [Marissa Perez](MarissaP.html)
 <br/>
 **Volunteer Assistant Researcher**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with dark hair.", echo=FALSE}
+knitr::include_graphics("images/QiyingM.png")
+```
+[Qiying Ma](QiyingM.html)
+<br/>
+**STEM Leaders Assistant Researcher**
 :::
 
 <center> 
